--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5",
     "node-sass": "^7.0.1"
+  },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
