--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
-    "validator": "^13.7.0"
-  },
-  "devDependencies": {
+    "validator": "^13.7.0",
     "nodemon": "^2.0.7"
   }
 }
