--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.2",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
-    "validator": "^13.7.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "stripe": "^9.2.0",
+    "validator": "^13.7.0"
   }
 }
