--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "chart.js": "^3.7.1",
     "country-state-city": "^3.0.1",
     "firebase": "^9.6.3",
     "overlay-navbar": "^1.1.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-chartjs-2": "^4.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
@@ -31,6 +34,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
